pod-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: dev
    disco: hdd
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
   disco: hdd
