deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world-vittor
  namespace: prod
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: hello-world-vittor-canary
      stableService: hello-world-vittor-stable
      trafficRouting:
        nginx: 
          stableIngress: hello-world-vittor-stable
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 80
      - pause: {duration: 10}
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
      - name: helloworldjava
        image: vittormaciel/helloworld-java:dev-23
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-vittor-canary
spec:
  type: ClusterIP
  selector:
    bb: web
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-vittor-stable
spec:
  type: ClusterIP
  selector:
    bb: web
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-vittor-stable
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: https://192.168.49.2:8443 
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-vittor-stable
          servicePort: 80
