rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world-vittor
  namespace: prod
spec:
  replicas: 5
  strategy:
    canary:
    #  canaryService: hello-world-vittor-canary
     # stableService: hello-world-vittor-stable
     # trafficRouting:
      #  nginx: 
      #    stableIngress: hello-world-vittor-stable
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
      - name: helloworldjava
        image: vittormaciel/helloworld-java:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-world-vittor-canary
# spec:
#   type: ClusterIP
#   selector:
#     bb: web
#   ports:
#   - port: 8080
#     targetPort: http
#     protocol: TCP
#     name: http

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-vittor-stable
spec:
  type: ClusterIP
  selector:
    bb: web
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-vittor-stable
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: rollout.vittor.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-vittor-stable
            port: 
              number: 8080
